--- a/neat.config
+++ b/neat.config
@@ -1,8 +1,8 @@
 
 [NEAT]
 fitness_criterion     = max
-fitness_threshold     = 10000
-pop_size              = 20
+fitness_threshold     = 1000000
+pop_size              = 50
 reset_on_extinction   = False
 
 [DefaultGenome]
@@ -35,7 +35,7 @@ conn_delete_prob        = 0.5
 
 # connection enable options
 enabled_default         = True
-enabled_mutate_rate     = 0.01
+enabled_mutate_rate     = 0.05
 
 feed_forward            = True
 initial_connection      = full
@@ -46,8 +46,8 @@ node_delete_prob        = 0.2
 
 # network parameters
 num_hidden              = 0
-num_inputs              = 6
-num_outputs             = 2
+num_inputs              = 7
+num_outputs             = 4
 
 # node response options
 response_init_mean      = 1.0
