Adjusted some parameters to the NEAT algorithm.

--- a/neat.config
+++ b/neat.config
@@ -1,7 +1,7 @@
 
 [NEAT]
 fitness_criterion     = max
-fitness_threshold     = 1000000
+fitness_threshold     = 20000
 pop_size              = 50
 reset_on_extinction   = False
 
@@ -22,8 +22,8 @@ bias_init_stdev         = 1.0
 bias_max_value          = 30.0
 bias_min_value          = -30.0
 bias_mutate_power       = 0.5
-bias_mutate_rate        = 0.7
-bias_replace_rate       = 0.1
+bias_mutate_rate        = 0.8
+bias_replace_rate       = 0.12
 
 # genome compatibility options
 compatibility_disjoint_coefficient = 1.0
@@ -38,7 +38,7 @@ enabled_default         = True
 enabled_mutate_rate     = 0.05
 
 feed_forward            = True
-initial_connection      = full
+initial_connection      = full_direct
 
 # node add/remove rates
 node_add_prob           = 0.2
@@ -46,7 +46,7 @@ node_delete_prob        = 0.2
 
 # network parameters
 num_hidden              = 0
-num_inputs              = 7
+num_inputs              = 8
 num_outputs             = 4
 
 # node response options
@@ -68,13 +68,13 @@ weight_mutate_rate      = 0.8
 weight_replace_rate     = 0.1
 
 [DefaultSpeciesSet]
-compatibility_threshold = 3.0
+compatibility_threshold = 1.5
 
 [DefaultStagnation]
 species_fitness_func = max
-max_stagnation       = 20
+max_stagnation       = 5
 species_elitism      = 2
 
 [DefaultReproduction]
-elitism            = 2
-survival_threshold = 0.2
+elitism            = 3
+survival_threshold = 0.4
